<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.FeedbackActivity">

    <ImageView
        android:id="@+id/feedback_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/feedback_banner"
        android:contentDescription="@string/banner_feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:padding="8dp"
        android:text="@string/deixe_feedback"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/feedback_banner"
        app:layout_constraintEnd_toEndOf="@id/feedback_banner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/feedback_banner" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedback_campo_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_banner">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedback_campo_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/feedback_campo_email"
        app:layout_constraintStart_toStartOf="@id/feedback_campo_email"
        app:layout_constraintTop_toBottomOf="@id/feedback_campo_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seu_feedback"
            android:inputType="textLongMessage" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/orientacao_feedback"
        app:layout_constraintEnd_toEndOf="@id/feedback_campo_feedback"
        app:layout_constraintStart_toStartOf="@id/feedback_campo_feedback"
        app:layout_constraintTop_toBottomOf="@id/feedback_campo_feedback"

        />

</androidx.constraintlayout.widget.ConstraintLayout>